--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/2d7cd4a500.js" crossorigin="anonymous"></script>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;500;700;800&display=swap"
+      rel="stylesheet">
+      
     <title>React App</title>
   </head>
   <body>
@@ -39,5 +47,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
   </body>
 </html>
